--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header {
 }
 
 .logo img {
+  height: auto;
+}
+
+.logo img {
   width: 150px; /* Adjust the width of the logo as needed */
   height: auto;
 }
